0.1.6-Beta - Better Configuration
- Completely changed how the configuration works.
  - Switched from a Properties configuration to a YAML configuration.
  - Added A LOT more comments and made them more descriptive.
  - Added more entries to the configuration, so the user has more control, while being even easier.
  - Made the configuration updates more reliable and migrate old configuration too, so you don't have to reconfigure it every time.
  - Added Config.IncorrectConfigurationException, which is thrown when the user configured the plugin incorrectly.
- Switched from HectusUtilities to only LibPG, to keep it more lightweight and up-to-date.
- Added the Peelocity Icon (icon.png).
- Added support for more database types:
  - PostgreSQL
  - Oracle Database
  - MySQL
  - MariaDB
  - Microsoft SQL Server